--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <input type="submit" value="DESCARGAR CV">
                 </div>
             </div>
-            <div class="main-div div-right"> <img src="/IMG/perfil.jpg" alt=""></div>
+            <div class="main-div div-right"> <img src="IMG/perfil.jpg" alt=""></div>
         </div>
         <div id="sobreMi"></div><br>
         <div class="main_about">
@@ -95,8 +95,8 @@
             <div class="icon"><i class="devicon-csharp-plain"></i><label for="">C SHARP</label></div>
             <div class="icon"><i class="devicon-mysql-plain"></i><label for="">MYSQL</label></div>
             <div class="icon"><i class="devicon-sqlite-plain"></i><label for="">SQLITE</label></div>
-            <div class="icon"><img src="/IMG/SQLSERVER.jpg" alt=""><label for="">SQLSERVER</label></div>
-            <div class="icon"><img src="/IMG/B4A.jpg" alt=""><label for="">B4A</label></div>
+            <div class="icon"><img src="IMG/SQLSERVER.jpg" alt=""><label for="">SQLSERVER</label></div>
+            <div class="icon"><img src="IMG/B4A.jpg" alt=""><label for="">B4A</label></div>
         </div>
         </div>
         <div id="proyectoss"></div>
@@ -104,7 +104,7 @@
             <H1>PROYECTOS</H1>
             <div class="div-project">
                 <div class="projects">
-                    <div class="div-img"><img src="/IMG/AlquilerCanchas.jpg" alt=""></div>
+                    <div class="div-img"><img src="IMG/AlquilerCanchas.jpg" alt=""></div>
                     <div class="div-content">
                         <h5>Alquiler Canchas</h5>
                         <h6>Tecnologías</h6>
@@ -114,11 +114,11 @@
                     </div>
                 </div>
                 <div class="projects">
-                    <div class="div-img"><img src="/IMG/Proyecto.jpg" alt=""></div>
+                    <div class="div-img"><img src="IMG/Proyecto.jpg" alt=""></div>
                     <div class="div-content"></div>
                 </div>
                 <div class="projects">
-                    <div class="div-img"><img src="/IMG/Proyecto.jpg" alt=""></div>
+                    <div class="div-img"><img src="IMG/Proyecto.jpg" alt=""></div>
                     <div class="div-content"></div>
                 </div>
 
@@ -128,20 +128,20 @@
         <div class="main_certificados">
             <h1>CERTIFICADOS</h1>
             <div class="div-cert">
-                <img src="/IMG/Certificado_Algoritmos.jpg" alt="" onclick="toggleImageSize(this)">
-                <img src="/IMG/Certificado_Java.jpg" alt="" onclick="toggleImageSize(this)">
-                <img src="/IMG/Certificado_MySQL.jpg" alt="" onclick="toggleImageSize(this)">
-                <img src="/IMG/Certificado_Git.jpg" alt="" onclick="toggleImageSize(this)">
-                <img src="/IMG/Certificado_HTMLyCSS.jpg" alt="" onclick="toggleImageSize(this)">
-                <img src="/IMG/Certificado_JavaWeb.jpg" alt="" onclick="toggleImageSize(this)">
-                <img src="/IMG/Certificado_SpringBoot.jpg" alt="" onclick="toggleImageSize(this)">
+                <img src="IMG/Certificado_Algoritmos.jpg" alt="" onclick="toggleImageSize(this)">
+                <img src="IMG/Certificado_Java.jpg" alt="" onclick="toggleImageSize(this)">
+                <img src="IMG/Certificado_MySQL.jpg" alt="" onclick="toggleImageSize(this)">
+                <img src="IMG/Certificado_Git.jpg" alt="" onclick="toggleImageSize(this)">
+                <img src="IMG/Certificado_HTMLyCSS.jpg" alt="" onclick="toggleImageSize(this)">
+                <img src="IMG/Certificado_JavaWeb.jpg" alt="" onclick="toggleImageSize(this)">
+                <img src="IMG/Certificado_SpringBoot.jpg" alt="" onclick="toggleImageSize(this)">
             </div>
         </div>
         
         <div class="main_contact" id="contacto">
             <h1>CONTACTO</h1>
             <div class="contact-form">
-                <img src="/IMG/Img-form.jpg" alt="">
+                <img src="IMG/Img-form.jpg" alt="">
                 <div>
                     <form action="https://formsubmit.co/lautarovillabona.ar@gmail.com" method="POST"  class="form">
                         <label for="name" id="label-form">¡Trabajemos juntos!</label>
