--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                     <a href="https://github.com/dashboard" title="Github"><i class="fas fa-brands fa-github"></i></a>
                     <a href="https://wa.me/3444517276?text=Hola%20me%20interesa%20tu%20servicio" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                     <a href="https://www.linkedin.com/in/lautaro-villabona-40002a296/" title="Linkedin"><i class="fas fa-brands fa-linkedin"></i></a>
-                    <input type="submit" value="DESCARGAR CV">
+                    <a href="CV_Lautaro_Villabona.docx" download>
+                        <input type="button" value="DESCARGAR CV">
+                    </a>
                 </div>
             </div>
             <div class="main-div div-right"> <img src="IMG/perfil.jpg" alt=""></div>
