--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portafolio de Lautaro Villabona, desarrollador backend especializado en proyectos web, móviles y de escritorio.">
     <script src="https://kit.fontawesome.com/2f7feb84f1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="style.css">
@@ -34,7 +35,7 @@
                     </a>
                 </div>
             </div>
-            <div class="main-div div-right"> <img src="IMG/Retrato digital estilo caricatura.png" alt=""></div>
+            <div class="main-div div-right"> <img src="IMG/Retrato digital estilo caricatura.webp" alt=""></div>
         </div>
         <div id="sobreMi"></div><br>
         <div class="main_about">
@@ -99,8 +100,8 @@
                 <div class="icon"><i class="devicon-csharp-plain"></i><label for="">C SHARP</label></div>
                 <div class="icon"><i class="devicon-mysql-plain"></i><label for="">MYSQL</label></div>
                 <div class="icon"><i class="devicon-sqlite-plain"></i><label for="">SQLITE</label></div>
-                <div class="icon"><img src="IMG/SQLSERVER.jpg" alt=""><label for="">SQLSERVER</label></div>
-                <div class="icon"><img src="IMG/B4A.jpg" alt=""><label for="">B4A</label></div>
+                <div class="icon"><img src="IMG/SQLSERVER.webp" alt=""><label for="">SQLSERVER</label></div>
+                <div class="icon"><img src="IMG/B4A.webp" alt=""><label for="">B4A</label></div>
             </div>
         </div>
         <div id="proyectoss"></div>
@@ -126,7 +127,7 @@
             <H1>PROYECTOS</H1>
             <div class="div-project"> 
                 <div class="projects">
-                    <div class="div-img"><img src="IMG/javaweb.jpg" alt=""></div>
+                    <div class="div-img"><img src="IMG/javaweb.webp" alt=""></div>
                     <div class="div-content">
                         <h4>Alquiler Canchas</h4>
                         <h5 style="margin-top: 5px;">Tecnologías</h5>
@@ -141,12 +142,12 @@
                     </div>
                 </div>
                 <div class="projects">
-                    <div class="div-img"><img src="IMG/B4A.png" alt=""></div>
+                    <div class="div-img"><img src="IMG/B4A.webp" alt=""></div>
                                         <div class="div-content">
                         <h4>Gestión Instituto de Ingles</h4>
                         <h5 style="margin-top: 5px;">Tecnologías</h5>
                         <div class="technology">
-                            <img class="img-proyect" src="IMG/B4A.jpg" alt="">
+                            <img class="img-proyect" src="IMG/B4A.webp" alt="">
                             <i class="devicon-sqlite-plain sqlite"></i>
                             
                         </div>
@@ -154,13 +155,13 @@
                     </div>
                 </div>
                 <div class="projects">
-                        <div class="div-img"><img src="IMG/c.png" alt=""></div>
+                        <div class="div-img"><img src="IMG/c.webp" alt=""></div>
                         <div class="div-content">
                         <h4>Gestión Cliente-Proveedor</h4>
                         <h5 style="margin-top: 5px;">Tecnologías</h5>
                         <div class="technology">
                             <i class="devicon-csharp-plain"></i>
-                            <img class="img-proyect" src="IMG/SQLSERVER.jpg" alt="">
+                            <img class="img-proyect" src="IMG/SQLSERVER.webp" alt="">
                             
                         </div>
                         <button class="contentButton" onclick="openModal('proveedor')">Ver más</button>
@@ -175,13 +176,13 @@
                 <div class="carrusel-container">
                     <button class="prevv">&#10094;</button>
                     <div class="div-cert">
-                        <img src="IMG/Certificado_Algoritmos.jpg" alt="" onclick="toggleImageSize(this)">
-                        <img src="IMG/Certificado_Java.jpg" alt="" onclick="toggleImageSize(this)">
-                        <img src="IMG/Certificado_MySQL.jpg" alt="" onclick="toggleImageSize(this)">
-                        <img src="IMG/Certificado_Git.jpg" alt="" onclick="toggleImageSize(this)">
-                        <img src="IMG/Certificado_HTMLyCSS.jpg" alt="" onclick="toggleImageSize(this)">
-                        <img src="IMG/Certificado_JavaWeb.jpg" alt="" onclick="toggleImageSize(this)">
-                        <img src="IMG/Certificado_SpringBoot.jpg" alt="" onclick="toggleImageSize(this)">
+                        <img src="IMG/Certificado_Algoritmos.webp" alt="" onclick="toggleImageSize(this)">
+                        <img src="IMG/Certificado_Java.webp" alt="" onclick="toggleImageSize(this)">
+                        <img src="IMG/Certificado_MySQL.webp" alt="" onclick="toggleImageSize(this)">
+                        <img src="IMG/Certificado_Git.webp" alt="" onclick="toggleImageSize(this)">
+                        <img src="IMG/Certificado_HTMLyCSS.webp" alt="" onclick="toggleImageSize(this)">
+                        <img src="IMG/Certificado_JavaWeb.webp" alt="" onclick="toggleImageSize(this)">
+                        <img src="IMG/Certificado_SpringBoot.webp" alt="" onclick="toggleImageSize(this)">
                     </div>
                     <button class="nextt">&#10095;</button>
                 </div>
@@ -191,7 +192,7 @@
         <div class="main_contact" id="contacto">
             <h1>CONTACTO</h1>
             <div class="contact-form">
-                <img src="IMG/Img-form.jpg" alt="">
+                <img src="IMG/Img-form.webp" alt="">
                 <div>
                     <form action="https://formsubmit.co/lautarovillabona.ar@gmail.com" method="POST" class="form">
                         <label for="name" id="label-form">¡Trabajemos juntos!</label>
