--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                 <div class="icon"><i class="devicon-csharp-plain"></i><label for="">C SHARP</label></div>
                 <div class="icon"><i class="devicon-mysql-plain"></i><label for="">MYSQL</label></div>
                 <div class="icon"><i class="devicon-sqlite-plain"></i><label for="">SQLITE</label></div>
-                <div class="icon"><img src="IMG/SQLSERVER.webp" alt=""><label for="">SQLSERVER</label></div>
-                <div class="icon"><img src="IMG/B4A.webp" alt=""><label for="">B4A</label></div>
+                <div class="icon"><img loading="lazy" src="IMG/SQLSERVER.webp" alt=""><label for="">SQLSERVER</label></div>
+                <div class="icon"><img loading="lazy" src="IMG/B4A.webp" alt=""><label for="">B4A</label></div>
             </div>
         </div>
         <div id="proyectoss"></div>
@@ -115,7 +115,7 @@
             <button class="prev">&#10094;</button>
             <h2 class="h2-proyect">Sistema Web</h2>
             <div class="carousel-track">
-                <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+                <img loading="lazy" src="" alt=""><img loading="lazy" src="" alt=""><img loading="lazy" src="" alt=""><img loading="lazy" src="" alt=""><img loading="lazy" src="" alt=""><img loading="lazy" src="" alt=""><img loading="lazy" src="" alt=""><img loading="lazy" src="" alt="">
             </div>
             <button class="next">&#10095;</button>
             </div>
@@ -127,7 +127,7 @@
             <H1>PROYECTOS</H1>
             <div class="div-project"> 
                 <div class="projects">
-                    <div class="div-img"><img src="IMG/javaweb.webp" alt=""></div>
+                    <div class="div-img"><img loading="lazy" src="IMG/javaweb.webp" alt=""></div>
                     <div class="div-content">
                         <h4>Alquiler Canchas</h4>
                         <h5 style="margin-top: 5px;">Tecnologías</h5>
@@ -142,12 +142,12 @@
                     </div>
                 </div>
                 <div class="projects">
-                    <div class="div-img"><img src="IMG/B4A.webp" alt=""></div>
+                    <div class="div-img"><img loading="lazy" src="IMG/B4A.webp" alt=""></div>
                                         <div class="div-content">
                         <h4>Gestión Instituto de Ingles</h4>
                         <h5 style="margin-top: 5px;">Tecnologías</h5>
                         <div class="technology">
-                            <img class="img-proyect" src="IMG/B4A.webp" alt="">
+                            <img loading="lazy" class="img-proyect" src="IMG/B4A.webp" alt="">
                             <i class="devicon-sqlite-plain sqlite"></i>
                             
                         </div>
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <div class="projects">
-                        <div class="div-img"><img src="IMG/c.webp" alt=""></div>
+                        <div class="div-img"><img loading="lazy" src="IMG/c.webp" alt=""></div>
                         <div class="div-content">
                         <h4>Gestión Cliente-Proveedor</h4>
                         <h5 style="margin-top: 5px;">Tecnologías</h5>
@@ -176,13 +176,13 @@
                 <div class="carrusel-container">
                     <button class="prevv">&#10094;</button>
                     <div class="div-cert">
-                        <img src="IMG/Certificado_Algoritmos.webp" alt="" onclick="toggleImageSize(this)">
-                        <img src="IMG/Certificado_Java.webp" alt="" onclick="toggleImageSize(this)">
-                        <img src="IMG/Certificado_MySQL.webp" alt="" onclick="toggleImageSize(this)">
-                        <img src="IMG/Certificado_Git.webp" alt="" onclick="toggleImageSize(this)">
-                        <img src="IMG/Certificado_HTMLyCSS.webp" alt="" onclick="toggleImageSize(this)">
-                        <img src="IMG/Certificado_JavaWeb.webp" alt="" onclick="toggleImageSize(this)">
-                        <img src="IMG/Certificado_SpringBoot.webp" alt="" onclick="toggleImageSize(this)">
+                        <img loading="lazy" src="IMG/Certificado_Algoritmos.webp" alt="" onclick="toggleImageSize(this)">
+                        <img loading="lazy" src="IMG/Certificado_Java.webp" alt="" onclick="toggleImageSize(this)">
+                        <img loading="lazy" src="IMG/Certificado_MySQL.webp" alt="" onclick="toggleImageSize(this)">
+                        <img loading="lazy" src="IMG/Certificado_Git.webp" alt="" onclick="toggleImageSize(this)">
+                        <img loading="lazy" src="IMG/Certificado_HTMLyCSS.webp" alt="" onclick="toggleImageSize(this)">
+                        <img loading="lazy" src="IMG/Certificado_JavaWeb.webp" alt="" onclick="toggleImageSize(this)">
+                        <img loading="lazy" src="IMG/Certificado_SpringBoot.webp" alt="" onclick="toggleImageSize(this)">
                     </div>
                     <button class="nextt">&#10095;</button>
                 </div>
@@ -192,7 +192,7 @@
         <div class="main_contact" id="contacto">
             <h1>CONTACTO</h1>
             <div class="contact-form">
-                <img src="IMG/Img-form.webp" alt="">
+                <img loading="lazy" src="IMG/Img-form.webp" alt="">
                 <div>
                     <form action="https://formsubmit.co/lautarovillabona.ar@gmail.com" method="POST" class="form">
                         <label for="name" id="label-form">¡Trabajemos juntos!</label>
