--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                         <h3>ESTUDIOS</h3>
                         <div class="content-container">
                             <i class="fa-solid fa-book"></i>
-                            <p>Como profesional, cuento con estudios superiores en Análisis y Desarrollo de Software. De
-                                igual manera, permanezco en una búsqueda constante de conocimiento y en la exploración
-                                de las últimas tecnologías, ya que considero que son aspectos fundamentales en el mundo
-                                de la programación.</p>
+                            <p>Como profesional, cuento con estudios superiores en Análisis y Desarrollo de Software y 
+                                actualmente me encuentro cursando la Ingeniería en Informática. Mantengo una búsqueda 
+                                constante de conocimiento y de exploración de las últimas tecnologías, convencido de que la 
+                                actualización continua es esencial en el mundo de la programación.</p>
                         </div>
                     </div>
                 </div>
@@ -229,5 +229,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
