--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             class="fa-brands fa-whatsapp"></i></a>
                     <a href="https://www.linkedin.com/in/lautaro-villabona-40002a296/" title="Linkedin"><i
                             class="fas fa-brands fa-linkedin"></i></a>
-                    <a href="CV_Lautaro_Villabona.docx" download>
+                    <a href="CV_LautaroVillabona.pdf" download>
                         <input type="button" value="DESCARGAR CV">
                     </a>
                 </div>
@@ -232,3 +232,4 @@
 
 
 </html>
+
