--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="main_contact" id="contacto">
             <h1>CONTACTO</h1>
             <div class="contact-form">
-                <img loading="lazy" src="IMG/Img-form.webp" alt="">
+                <img loading="lazy" src="IMG/formImg.png" alt="">
                 <div>
                     <form action="https://formsubmit.co/lautarovillabona.ar@gmail.com" method="POST" class="form">
                         <label for="name" id="label-form">¡Trabajemos juntos!</label>
@@ -232,4 +232,5 @@
 
 
 </html>
+
 
